move to Deque from List